<resources>
    <string name="app_name">PersonasMaterialDiplomado20181</string>
    <string name="action_settings">Settings</string>
    <string name="titulo_agregar">Agregar Persona</string>
    <string name="cedula">Cédula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string-array name="sexo">
        <item>@string/masculino</item>
        <item>@string/femenino</item>
    </string-array>
    <string name="mensaje_guardado">Persona Guardada Exitosamente</string>
    <string name="datos">Datos de la persona</string>
    <string name="sexo">Sexo</string>
    <string name="mensaje_eliminar">¿Estas seguro que quieres eliminar?</string>
    <string name="eliminar_si">Si</string>
    <string name="eliminar_no">No</string>
    <string name="modificar_persona">Modificar Persona</string>
</resources>
